# glfw_bug

./: CMakeLists.txt  Dockerfile
src/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
